Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-3420

list local replica with parameter --list_detail=true will core

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 1.17.0
    • None
    • None

    Description

      Execute command: kudu local_replica list -fs_data_dirs=.... -fs_wal_dir=...
      --list_detail=true will core. Because this command inits fs manager without
      opening block manager, but it uses fs mananger to get data dir group PB.

      Steps to repeat the bug:

      [DEV (v.v) sa_cluster@hybrid01 ~]$ sudo ./kudu  local_replica  list -fs_data_dirs=//kudu/tserver_data -fs_wal_dir=/kudu/tserver_wal --list_detail
      I20221105 21:08:04.123214  9633 fs_manager.cc:334] Metadata directory not provided
      I20221105 21:08:04.123286  9633 fs_manager.cc:340] Using write-ahead log directory (fs_wal_dir) as metadata directory
      W20221105 21:08:04.123649  9633 dir_manager.cc:457] IO error: Could not lock instance file. Make sure that Kudu is not already running and you are not trying to run Kudu with a different user than before: lock /kudu/tserver_data/data/block_manager_instance: Resource temporarily unavailable (error 11)
      W20221105 21:08:04.123663  9633 dir_manager.cc:458] Proceeding without lock
      I20221105 21:08:04.123893  9633 fs_manager.cc:522] Time spent opening directory manager: real 0.000s    user 0.000s    sys 0.000s
      I20221105 21:08:04.123909  9633 fs_manager.cc:576] Opened local filesystem: /kudu/tserver_data,/kudu/tserver_wal
      uuid: "2f2514aa3b534a439b09811cfe712312"
      format_stamp: "Formatted at 2022-11-02 08:59:08 on hybrid01"
      Tablet: 89d78f032c9b4653a6fe6467ae77a450

          • Aborted at 1667653684 (unix time) try "date -d @1667653684" if you are using GNU date ***
            PC: @                0x0 (unknown)
          • SIGSEGV (@0x0) received by PID 9633 (TID 0x7f6770fc6a00) from PID 0; stack trace: ***
                @          0x14ee526 (unknown)
                @     0x7f677076f630 (unknown)
                @          0x13ba311 kudu::tablet::TabletMetadata::LoadFromSuperBlock()
                @          0x13bafa0 kudu::tablet::TabletMetadata::LoadFromDisk()
                @          0x13bb2a5 kudu::tablet::TabletMetadata::Load()
                @           0xe00d88 kudu::tools::DumpTabletMeta()
                @           0xe01417 kudu::tools::ListLocalReplicas()
                @           0xdc2824 std::_Function_handler<>::_M_invoke()
                @          0x1542350 kudu::tools::Action::Run()
                @           0xe774e5 kudu::tools::DispatchCommand()
                @           0xe77fb7 kudu::tools::RunTool()
                @           0xd2ca13 main
                @     0x7f676e960555 __libc_start_main
                @           0xdad584 (unknown)
            Segmentation fault

       

      See the core stack:

      Attachments

        Activity

          People

            Unassigned Unassigned
            wangxixu Xixu Wang
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: