[KUDU-3420] Fixbug of list local replica

Execute command: kudu local_replica list -fs_data_dirs=....
-fs_wal_dir=... --list_detail=true will core. Because
this command inits fs manager without opening block manager,
but it still uses fs mananger to get data dir group PB.

The core stack:
@        0x14ee526 (unknown)
@   0x7f677076f630 (unknown)
@        0x13ba311 kudu::tablet::TabletMetadata::LoadFromSuperBlock()
@        0x13bafa0 kudu::tablet::TabletMetadata::LoadFromDisk()
@        0x13bb2a5 kudu::tablet::TabletMetadata::Load()
@         0xe00d88 kudu::tools::DumpTabletMeta()
@         0xe01417 kudu::tools::ListLocalReplicas()
@         0xdc2824 std::_Function_handler<>::_M_invoke()
@        0x1542350 kudu::tools::Action::Run()
@         0xe774e5 kudu::tools::DispatchCommand()
@         0xe77fb7 kudu::tools::RunTool()
@         0xd2ca13 main
@   0x7f676e960555 __libc_start_main
@         0xdad58

See the detail #KUDU-3420

Change-Id: I7d8551280ad8edd416a0dd1b9611185cabe1a5bc
Reviewed-on: http://gerrit.cloudera.org:8080/19209
Reviewed-by: Yingchun Lai <acelyc1112009@gmail.com>
Tested-by: Yingchun Lai <acelyc1112009@gmail.com>